tests/NormalTests/paczka1/fuzzy1/64908975.err
Error in line 1: xyDwjW1aZlv A10 45,7
Error in line 16: Xv69AA S518 13,5
Error in line 6: Kd6 A657 91,2
Error in line 23: Xv69AA A10 71,5
Error in line 26: Xv69AA S518 37,1
